Fixed navbar not fixing on firefox - homepage

--- a/html/css/main_page.css
+++ b/html/css/main_page.css
@@ -11,7 +11,6 @@ body {
     color: white;
     background-color: var(--secondary-color-dark);
     width: 100%;
-    overflow-x: hidden !important;
 }
 
 input, button:focus {
@@ -34,7 +33,7 @@ a:hover {
 
 #banner-wrapper {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 #banner-image-container > img, #banner-image-container {
